k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-prod
  labels:
    name: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample-preview
  labels:
    name: preview
