k8s/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: myrepo/todo-service:latest
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
